--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"> 
     <title>A Era Artificial</title>
 </head>
 <body>
+    <div class="container-titulo">
+        <h1>A Era Artificial</h1>
+        <img src="assets/a era artificial ed timeless.jpg">
+        <h2>A Tomada de Consciência das Máquinas</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati inventore sint perferendis culpa dignissimos minima ut officiis omnis repellendus ratione cum, exercitationem praesentium, tempore sed laborum corrupti odit dolor ab.</p>
+        <a href="#">COMPRAR</a>
+    </div>
 
+    <div class="container-sinopse">
+        <h3>Uma Revolução sem Precedentes</h3>
+        <p><span><em><b>Era Artificial - A Tomada de Consciência das Máquinas</em></b></span>, lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rerum voluptatum, officiis dolor adipisci fuga dignissimos voluptate quod explicabo repellat, corporis accusantium sunt rem iure itaque perferendis natus quidem eum.</p>
+    </div>
 </body>
 </html>
