--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Era Artificial - A Tomada de Consciência das Máquinas">
+    <meta name="robots" content="follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="style/css" href="css/estilo.css"> 
     <title>A Era Artificial</title>
 </head>
 <body>
@@ -21,6 +24,20 @@
     <div class="container-sinopse">
         <h3>Uma Revolução sem Precedentes</h3>
         <p><span><em><b>Era Artificial - A Tomada de Consciência das Máquinas</em></b></span>, lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rerum voluptatum, officiis dolor adipisci fuga dignissimos voluptate quod explicabo repellat, corporis accusantium sunt rem iure itaque perferendis natus quidem eum.</p>
+    </div>
+
+    <div class="container-autoria">
+        <h3>Informações Sobre a Autora</h3>
+        <img src="/assets/autora.jpg">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta praesentium, aspernatur recusandae nulla nostrum nihil veritatis a sequi earum, doloremque animi maxime iure corrupti! Sit, illum. Eius, commodi maxime?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolorum reprehenderit corporis molestias quam ad quibusdam sit, animi, vitae earum, velit temporibus dicta beatae dolor expedita praesentium ducimus delectus dolores.
+        </p>
+    </div>
+
+    <div class="container-marketing">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis libero voluptas sequi? Provident eos cumque nesciunt, sit facere blanditiis maxime ut est culpa esse amet eveniet eaque odio maiores.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit illum, corrupti itaque culpa dicta ratione error pariatur laborum deleniti harum expedita sit asperiores officiis enim dolores, nisi molestiae officia consequatur.</p>   
+        <a href="#">COMPRAR</a>
     </div>
 </body>
 </html>
