--- a/index.html
+++ b/index.html
@@ -13,31 +13,56 @@
     <title>A Era Artificial</title>
 </head>
 <body>
-    <div class="container-titulo">
-        <h1>A Era Artificial</h1>
-        <img src="assets/a era artificial ed timeless.jpg">
-        <h2>A Tomada de Consciência das Máquinas</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati inventore sint perferendis culpa dignissimos minima ut officiis omnis repellendus ratione cum, exercitationem praesentium, tempore sed laborum corrupti odit dolor ab.</p>
-        <a href="#">COMPRAR</a>
-    </div>
 
-    <div class="container-sinopse">
-        <h3>Uma Revolução sem Precedentes</h3>
-        <p><span><em><b>Era Artificial - A Tomada de Consciência das Máquinas</em></b></span>, lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rerum voluptatum, officiis dolor adipisci fuga dignissimos voluptate quod explicabo repellat, corporis accusantium sunt rem iure itaque perferendis natus quidem eum.</p>
-    </div>
+    <!-- nav menu do site -->
+    <nav class="menu">
+        <a href="#"><img src="assets/logo-menu-topo.jpg"></a>
+        <form action="GET">
+            <input type="text" name="busca" value="O que você procura?">
+        </form>
+        <a href="cadastro.html">Entre ou cadastre-se</a>
+        <a href="#"><img src="/assets/carrinho 3.png"></a>
 
-    <div class="container-autoria">
-        <h3>Informações Sobre a Autora</h3>
-        <img src="/assets/autora.jpg">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta praesentium, aspernatur recusandae nulla nostrum nihil veritatis a sequi earum, doloremque animi maxime iure corrupti! Sit, illum. Eius, commodi maxime?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolorum reprehenderit corporis molestias quam ad quibusdam sit, animi, vitae earum, velit temporibus dicta beatae dolor expedita praesentium ducimus delectus dolores.
-        </p>
-    </div>
+    </nav>
+    
+    <!-- secao principal do site -->
+    <main>
+        <div class="container-titulo">
+            <h1>A Era Artificial</h1>
+            <img src="assets/a era artificial ed timeless.jpg">
+            <h2>A Tomada de Consciência das Máquinas</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati inventore sint perferendis culpa dignissimos minima ut officiis omnis repellendus ratione cum, exercitationem praesentium, tempore sed laborum corrupti odit dolor ab.</p>
+            <a href="#">COMPRAR</a>
+        </div>
 
-    <div class="container-marketing">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis libero voluptas sequi? Provident eos cumque nesciunt, sit facere blanditiis maxime ut est culpa esse amet eveniet eaque odio maiores.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit illum, corrupti itaque culpa dicta ratione error pariatur laborum deleniti harum expedita sit asperiores officiis enim dolores, nisi molestiae officia consequatur.</p>   
-        <a href="#">COMPRAR</a>
-    </div>
+        <section class="container-sinopse">
+            <h3>Uma Revolução sem Precedentes</h3>
+            <p><span><em><b>Era Artificial - A Tomada de Consciência das Máquinas</em></b></span>, lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rerum voluptatum, officiis dolor adipisci fuga dignissimos voluptate quod explicabo repellat, corporis accusantium sunt rem iure itaque perferendis natus quidem eum.</p>
+        </section>
+
+        <section class="container-autoria">
+            <h3>Informações Sobre a Autora</h3>
+            <img src="/assets/autora.jpg">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta praesentium, aspernatur recusandae nulla nostrum nihil veritatis a sequi earum, doloremque animi maxime iure corrupti! Sit, illum. Eius, commodi maxime?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolorum reprehenderit corporis molestias quam ad quibusdam sit, animi, vitae earum, velit temporibus dicta beatae dolor expedita praesentium ducimus delectus dolores.
+            </p>
+        </section>
+
+        <section class="container-marketing">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis libero voluptas sequi? Provident eos cumque nesciunt, sit facere blanditiis maxime ut est culpa esse amet eveniet eaque odio maiores.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit illum, corrupti itaque culpa dicta ratione error pariatur laborum deleniti harum expedita sit asperiores officiis enim dolores, nisi molestiae officia consequatur.</p>   
+            <a href="#">COMPRAR</a>
+        </section>
+    </main>
+
+    <!-- footer | rodape do site -->
+    <footer class="footer">
+        <p>Meios de Pagamento</p>
+        <img src="">
+        <p>Site Seguro</p>
+        <img src="">
+        <p>Redes Sociais</p>
+        <img src="">
+    </footer>
 </body>
 </html>
