--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div class="footer-itens">
             <p>Meios de Pagamento</p>
-            <img src="">
+            <img src="/assets/credit-cards-templates 3.jpg">
         </div>
 
         <div class="footer-itens">
@@ -161,7 +161,7 @@
         <div class="autoria">
             <p>Desenvolvido por <span><a href="https://github.com/j-guerreiro">j-guerreiro</span></a></p>
         </div>
-        
+
     </footer>
     
 </body>
