--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div class="footer-itens">
             <p>Meios de Pagamento</p>
-            <img src="/assets/credit-cards-templates 3.jpg">
+            <img src="/assets/credit-cards-templates 3.png">
         </div>
 
         <div class="footer-itens">
