--- a/index.html
+++ b/index.html
@@ -137,32 +137,35 @@
 
         </div>
     </main>
-
+    <!-- newsletter | assinatura -->
+    <aside class="newsletter">
+        <div class="newsletter-itens">
+            <p id="titulo-newsletter">Se inscreva e receba novidades</p>
+            <p id="subtitulo-newsletter">Nos diga quais livros você mais gosta</p>
+        </div>
+        <div class="newsletter-itens">
+            <a href="#" id="newsletter-button">Assine-já</a>
+        </div>
+    </aside>
     <!-- footer | rodape do site -->
     <footer class="footer">
-
         <div class="footer-itens">
             <p>Meios de Pagamento</p>
             <img src="/assets/credit-cards-templates 3.png">
         </div>
-
         <div class="footer-itens">
             <p>Site Seguro</p>
             <img src="/assets/escudo proteção pequeno 2.png">
         </div>
-        
         <div class="footer-itens">
             <p>Redes Sociais</p>
             <a href="#"><img src="/assets/twitter.png"></a>
             <a href="#"><img src="/assets/instagram.png"></a>
             <a href="#"><img src="/assets/facebook.png"></a>
         </div>
-
         <div class="autoria">
             <p>Desenvolvido por <span><a href="https://github.com/j-guerreiro">j-guerreiro</span></a></p>
         </div>
-
     </footer>
-    
 </body>
 </html>
