update - arquivo css para media-queries criado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilo.css"> 
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/media-queries.css">  
     <title>A Era Artificial</title>
   </head>
   <body>
