update - refatorando flex containers do rodapé, added octocat - responsivo ok

--- a/index.html
+++ b/index.html
@@ -136,22 +136,25 @@
       </aside>
       <!-- footer | rodape do site -->
       <footer class="footer">
-        <div class="footer-itens">
-          <p>Meios de Pagamento</p>
-          <img src="/assets/credit-cards-templates 3.png">
-        </div>
-        <div class="footer-itens">
-          <p>Site Seguro</p>
-          <img src="/assets/escudo proteção pequeno 2.png">
-        </div>
-        <div class="footer-itens">
-          <p>Redes Sociais</p>
-          <a href="#"><img src="/assets/twitter.png"></a>
-          <a href="#"><img src="/assets/instagram.png"></a>
-          <a href="#"><img src="/assets/facebook.png"></a>
-        </div>
-        <div class="autoria">
-          <p>Desenvolvido por <span><a href="https://github.com/j-guerreiro">j-guerreiro</span></a></p>
+        <div class="inner-footer">
+          <div class="footer-itens">
+            <p>Meios de Pagamento</p>
+            <img src="/assets/credit-cards-templates 3.png">
+          </div>
+          <div class="footer-itens">
+            <p>Site Seguro</p>
+            <img src="/assets/escudo proteção pequeno 2.png">
+          </div>
+          <div class="footer-itens">
+            <p>Redes Sociais</p>
+            <a href="#"><img src="/assets/twitter.png"></a>
+            <a href="#"><img src="/assets/instagram.png"></a>
+            <a href="#"><img src="/assets/facebook.png"></a>
+          </div>
+          <div class="footer-itens">
+            <p>Desenvolvido por <span><a href="https://github.com/j-guerreiro">j-guerreiro</span></a></p>
+            <a href="https://github.com/j-guerreiro"><img src="/assets/octocat.png"></a>
+          </div>
         </div>
       </footer>
   </body>
