--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/media-queries.css">  
+    <link rel="stylesheet" href="css/media-queries.css">
+    <script src="js/script.js"></script>  
     <title>A Era Artificial</title>
   </head>
   <body>
