update - css animations added to footer, newsletter section flexbox and responsive ok

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             <a href="#"><img src="/assets/facebook.png"></a>
           </div>
           <div class="footer-itens">
-            <p>Desenvolvido por <span><a href="https://github.com/j-guerreiro">j-guerreiro</span></a></p>
-            <a href="https://github.com/j-guerreiro"><img src="/assets/octocat.png"></a>
+            <p class="autoria">Desenvolvido por <span><a id="autoria-link" href="https://github.com/j-guerreiro">j-guerreiro</span></a></p>
+            <a href="https://github.com/j-guerreiro"><img class="github-octo" src="/assets/octocat.png"></a>
           </div>
         </div>
       </footer>
