update - refatorando css, conteineres flex, rodape, menu topo

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </head>
   <body>
     <!-- nav menu do site -->
-    <nav class="menu-principal">
-      <a href="#"><img id="logo-principal" src="assets/logo-menu-topo.jpg"></a>
-      <form id="form-busca" action="GET">
-        <input id="form-input" type="text" name="busca" value="O que você procura?">
+    <nav id="navmenu" class="menu-principal">
+      <a onclick="abreMenu();" href="#"><img id="logo-principal" src="assets/logo-menu-topo.jpg"></a>
+        <form id="form-busca" action="GET">
+          <input id="form-input" type="text" name="busca" value="O que você procura?">
         </form>
-        <a class="elementos-menu" href="cadastro.html"><img src="/assets/boneco perfil 2.png">Entre ou cadastre-se</a>
+        <a class="elementos-menu" href="#"><img src="/assets/boneco perfil 2.png"></a>
         <a class="elementos-menu" href="#"><img src="/assets/favoritos 2.png"></a>
         <a class="elementos-menu" href="#"><img src="/assets/carrinho 3.png"></a>
       </nav>
@@ -51,7 +51,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis libero voluptas sequi? Provident eos cumque nesciunt, sit facere blanditiis maxime ut est culpa esse amet eveniet eaque odio maiores.</p>
                 <a class="button-comprar" href="#">COMPRAR</a>
               </section>
-          </section>
+           </section>
           </div>
           <!-- livro 2 -->
           <div class="livro">
@@ -140,11 +140,11 @@
         <div class="inner-footer">
           <div class="footer-itens">
             <p>Meios de Pagamento</p>
-            <img src="/assets/credit-cards-templates 3.png">
+            <img src="/assets/credit-cards-templates 4.png">
           </div>
           <div class="footer-itens">
             <p>Site Seguro</p>
-            <img src="/assets/escudo proteção pequeno 2.png">
+            <img src="/assets/escudo proteção pequeno 3.png">
           </div>
           <div class="footer-itens">
             <p>Redes Sociais</p>
@@ -154,7 +154,7 @@
           </div>
           <div class="footer-itens">
             <p class="autoria">Desenvolvido por <span><a id="autoria-link" href="https://github.com/j-guerreiro">j-guerreiro</span></a></p>
-            <a href="https://github.com/j-guerreiro"><img class="github-octo" src="/assets/octocat.png"></a>
+            <a href="https://github.com/j-guerreiro"><img class="github-octo" src="/assets/octocat 2.png"></a>
           </div>
         </div>
       </footer>
