update - added site icon to meta

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A Era Artificial - A Tomada de Consciência das Máquinas">
+    <meta name="description" content="Livraria - Era Artificial">
     <meta name="robots" content="follow">
+    <link rel="icon" type="image/png" href="assets/livro.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/media-queries.css">
     <script src="js/script.js"></script>  
-    <title>A Era Artificial</title>
+    <title>Livraria - A Era Artificial</title>
   </head>
   <body>
     <!-- nav menu do site -->
